[package]
name = "corda-ibc-client"
version = "0.1.0"
authors = ["YOSHIDA Masanori <masanori.yoshida@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "1"
prost = "0.7"
prost-types = "0.7"
tonic = "0.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
hex = "0.4"

[build-dependencies]
tonic-build = "0.4"
