[package]
name = "yui-corda-ibc-client"
version = "0.1.0"
authors = ["YOSHIDA Masanori <masanori.yoshida@gmail.com>"]
edition = "2021"

[dependencies]
bytes = "1"
prost = "0.11"
prost-types = "0.11"
tonic = "0.8"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread", "fs"] }
hex = "0.4"
structopt = "0.3"
lazy_static = "1.4.0"

[build-dependencies]
tonic-build = "0.8"
